--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "react-typing-effect": "^2.0.5",
     "scrollreveal": "^4.0.9",
     "web-vitals": "^2.1.4"
