--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.4.5",
+    "emailjs-com": "^3.2.0",
+    "nodemailer": "^6.9.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "react-typing-effect": "^2.0.5",
     "scrollreveal": "^4.0.9",
+    "smtpjs": "^0.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
