--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/react": "^3.0.0",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
     "nodemailer": "^6.9.15",
@@ -14,9 +15,11 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "react-tsparticles": "^2.12.2",
     "react-typing-effect": "^2.0.5",
     "scrollreveal": "^4.0.9",
     "smtpjs": "^0.0.1",
+    "tsparticles": "^3.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
